--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
 	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<script type="text/javascript" src="teste.js"></script>
+<script>
+function game(){ let essai=0; var numR = Math.floor(Math.random() * (80 - 20 + 1) + 20);
+
+while (num != numR){
+var num= prompt("Entrez un nombre entre 20 et 80:");
+ if (num > numR){
+	alert ("moins");
+	essai +=1;
+}else if (num<numR){
+	alert('plus');
+	essai+=1;
+}else {alert("bravo")
+alert(essai)}
+}}
+
+game()
+
+</script>
+<!--<script type="text/javascript" src="teste.js"></script> -->
 </body>
 </html>
